@@ -2,7 +2,6 @@ package com.cipitech.samples.spring.blog;
 
 import com.cipitech.samples.spring.blog.domain.Post;
 import com.cipitech.samples.spring.blog.service.PostService;
-import com.cipitech.samples.spring.blog.service.PostServiceInMemory;
 import com.cipitech.samples.spring.blog.web.controllers.PostController;
 import org.junit.jupiter.api.Test;
 import org.mockito.BDDMockito;
@@ -14,17 +13,25 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CopyOnWriteArraySet;
 
 import static org.hamcrest.Matchers.hasSize;
 
+/**
+ * Only PostController is scanned and only it's bean is created.
+ * In the postService field our mockBean is autowired.
+ */
 @WebMvcTest(controllers = PostController.class)
 class PostControllerTest
 {
 	@Autowired
 	private MockMvc             mvc;
 
+	// This is a mockBean.....that means that a fake bean for that class is created
+	// and every function that is called from that class succeeds but does nothing
+	// You can define for specific calls of this bean what will be returned by using
+	// BDDMockito.given().willReturn() pattern.
 	@MockBean
 	private PostService postService;
 
@@ -35,7 +42,7 @@ class PostControllerTest
 		post.setId(1);
 		post.setTitle("Test");
 		post.setDescription("Test");
-		postService.addPost(post);
+		postService.addPost(post);  // this does nothing as postService is a mock bean and the body of addPost is empty.
 
 		Post secondPost = new Post();
 		secondPost.setId(2);
@@ -43,8 +50,11 @@ class PostControllerTest
 		secondPost.setDescription("Test 1");
 		postService.addPost(secondPost);
 
-		BDDMockito.given(postService.findAllPosts()).willReturn(new CopyOnWriteArraySet<>(Arrays.asList(post, secondPost)));
+		//postService.findAllPosts() will be called in the PostController
+		//so the Set with the 2 elements will be returned.
+		BDDMockito.given(postService.findAllPosts()).willReturn(new CopyOnWriteArraySet<>(List.of(post, secondPost)));
 
+		//postService.isEmpty() will return false as it is a mock implementation and those return always false by default.
 		this.mvc.perform(MockMvcRequestBuilders.get("/posts").accept(MediaType.TEXT_HTML))
 				.andExpect(MockMvcResultMatchers.status().isOk())
 				.andExpect(MockMvcResultMatchers.view().name("post"))
